--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "devDependencies": {
     "esbuild": "^0.19.0",
     "gzip-size-cli": "^5.1.0",
-    "http-server": "^14.1.1"
+    "http-server": "^14.1.1",
+    "typescript": "^5.9.2"
   },
   "files": [
     "dist",
